# GuBot-PRTS

./: .env.dev  .gitignore  README.md  pyproject.toml
src/plugins/akdata_update/: __init__.py
src/plugins/prts_announce/: __init__.py  main.py  models.py
src/plugins/prts_announce/migrations/: 27b0c4e13010_.py
src/plugins/prts_announce/plugins/deal_announce/: __init__.py  deal.py  file.py  main.py
src/plugins/prts_announce/plugins/old_gacha/: __init__.py  helper.py  main.py
src/plugins/prts_announce/plugins/old_gacha/templates/: old_gacha_file.jinja2  old_gacha_page.jinja2  old_gacha_wikitable.jinja2
src/plugins/prts_announce/plugins/special_gacha/: __init__.py  helper.py  main.py  utils.py
src/plugins/prts_announce/plugins/special_gacha/templates/: special_gacha_file.jinja2  special_gacha_page.jinja2  special_gacha_wikitable.jinja2
src/plugins/prts_announce/plugins/weekly_gacha/: __init__.py  helper.py  main.py
src/plugins/prts_announce/plugins/weekly_gacha/templates/: weekly_gacha_file.jinja2  weekly_gacha_page.jinja2  weekly_gacha_wikitable.jinja2
src/plugins/prts_announce/templates/: arkannounce.css  arkannounce.html
src/plugins/prts_rc/: __init__.py  command.py  get_rc.py  models.py
src/plugins/prts_rc/migrations/: 9463391f3f76_.py
src/plugins/prts_stage/: tiles.py
src/plugins/reply_event_processor/: __init__.py  utils.py
